Add delay to refresh search and excludable categories.

--- a/ComponentAttacherSearch/ComponentAttacherSearch.csproj
+++ b/ComponentAttacherSearch/ComponentAttacherSearch.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttacherDetails.cs" />
+    <Compile Include="ComponentAttacherPatch.cs" />
     <Compile Include="ComponentAttacherSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
